--- a/app/src/main/res/layout/activity_lesser_greater.xml
+++ b/app/src/main/res/layout/activity_lesser_greater.xml
@@ -43,7 +43,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <CheckBox
-        android:id="@+id/simplecheck"
+        android:id="@+id/afrikacheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -102,6 +102,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Lesser"
-        app:layout_constraintBottom_toTopOf="@+id/simplecheck"
-        app:layout_constraintStart_toStartOf="@+id/simplecheck" />
+        app:layout_constraintBottom_toTopOf="@+id/afrikacheck"
+        app:layout_constraintStart_toStartOf="@+id/afrikacheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
